--- a/catalog.html
+++ b/catalog.html
@@ -149,18 +149,9 @@
             <a class="btn write-us" href="write_us.html">Напишите нам</a>
           </div>
 
-          <div class="modal-content">
-            <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
-            <h4 class="modal-content-title">Напишите нам</h4>
-            <form class="modal-form" action="#" method="post">
-              <label for="form-name">Ваше имя:<input type="text" name="name" value="" id="form-name" placeholder="Представтесь, пожалуйста"></label>
-              <label for="form-email">Ваше email:<input type="text" name="email" value="" id="form-email" placeholder="Для отправки ответа"></label>
-              <label for="form-text">Текст письма:<input type="text" name="name" value="" id="form-text" placeholder="В свободной форме"></label>
-              <a class="btn" href="#">Отправить</button>
-            </form>
-          </div>
+
         </div>
-        <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=s5h7SdQA4hwBOUJsNYzxPMu_bprufs7G&width=100%&height=415&lang=ru_UA&sourceType=constructor"></script>
+        <script type="text/javascript" charset="utf-8" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?sid=s5h7SdQA4hwBOUJsNYzxPMu_bprufs7G&width=2000%&height=415&lang=ru_UA&sourceType=constructor"></script>
       </div>
       <div class="container clearfix">
         <div class="footer-social ">
@@ -174,5 +165,15 @@
         </div>
       </div>
     </footer>
+    <div class="modal-content">
+      <button class="modal-content-close" type="button" title="Закрыть">Закрыть</button>
+      <h4 class="modal-content-title">Напишите нам</h4>
+      <form class="modal-form" action="#" method="post">
+        <label for="form-name">Ваше имя:<input type="text" name="name" value="" id="form-name" placeholder="Представтесь, пожалуйста"></label>
+        <label for="form-email">Ваше email:<input type="text" name="email" value="" id="form-email" placeholder="Для отправки ответа"></label>
+        <label for="form-text">Текст письма:<input type="text" name="name" value="" id="form-text" placeholder="В свободной форме"></label>
+        <a class="btn" href="#">Отправить</a>
+      </form>
+    </div>
   </body>
 </html>
